создание нового проекта, реализация и тесты

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=beb3e816ac5f78acf3cdeeb8017fbbab
+APP_SECRET=''
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
@@ -24,7 +24,7 @@ TRUSTED_HOSTS='^billing\.study-on\.local$'
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=3b6bdf6503900c638afed02f18cebf06
+JWT_PASSPHRASE=
 ###< lexik/jwt-authentication-bundle ###
 
 ###> doctrine/doctrine-bundle ###
