--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "doctrine/doctrine-fixtures-bundle": "^3.2",
         "doctrine/orm": "^2.6",
+        "gesdinet/jwt-refresh-token-bundle": "^0.7.1",
         "jms/serializer-bundle": "^3.3",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.4",
