--- a/config/services.yaml
+++ b/config/services.yaml
@@ -38,3 +38,8 @@ services:
         public: true
         arguments:
             $debug: "%kernel.debug%"
+    Gesdinet\JWTRefreshTokenBundle\Service\RefreshToken:
+      alias: "gesdinet.jwtrefreshtoken"
+
+    Gesdinet\JWTRefreshTokenBundle\Model\RefreshTokenManagerInterface:
+        alias: "gesdinet.jwtrefreshtoken.refresh_token_manager"
