--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "jms/serializer-bundle": "^3.3",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.4",
+        "sensio/framework-extra-bundle": "^5.4",
         "swagger-api/swagger-ui": "^3.22",
         "symfony/asset": "^4.3",
         "symfony/console": "4.3.*",
