--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -8,3 +8,6 @@ nelmio_api_doc:
         path_patterns:
             - ^/api/v1/login
             - ^/api/v1/register
+            - ^/api/v1/transactions
+            - ^/api/v1/courses
+            - ^/api/v1/courses/{code}
