--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,7 @@ security:
             pattern:  ^/api/v1/register
             stateless: true
             anonymous: true
+
         course_pay:
             pattern: ^/api/v1/courses/(.+)/pay
             stateless: true
@@ -35,21 +36,7 @@ security:
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
-        new_course:
-            pattern:  ^/api/v1/courses/add
-            stateless: true
-            anonymous: true
-            methods: POST
-        course_update:
-            pattern: ^/api/v1/courses/(.+)
-            methods: POST
-            stateless: true
-            anonymous: true
-        course_delete:
-            pattern: ^/api/v1/courses/(.+)
-            methods: DELETE
-            stateless: true
-            anonymous: true
+
         doc:
             pattern: ^/api/v1/doc
             stateless: true
@@ -59,6 +46,27 @@ security:
             methods: GET
             stateless: true
             anonymous: true
+        new_course:
+            pattern:  ^/api/v1/courses/add
+            stateless: true
+            methods: POST
+            guard:
+                authenticators:
+                    - lexik_jwt_authentication.jwt_token_authenticator
+        course_update:
+            pattern: ^/api/v1/courses/(.+)
+            methods: POST
+            stateless: true
+            guard:
+                authenticators:
+                    - lexik_jwt_authentication.jwt_token_authenticator
+        course_delete:
+            pattern: ^/api/v1/courses/(.+)
+            methods: DELETE
+            stateless: true
+            guard:
+                authenticators:
+                    - lexik_jwt_authentication.jwt_token_authenticator
         refresh:
             pattern: ^/api/v1/token/refresh
             stateless: true
@@ -104,11 +112,11 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/api/v1/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/v1/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/v1/courses/(.+)/pay, roles:  IS_AUTHENTICATED_REMEMBERED }
-        - { path: ^/api/v1/courses/add, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/v1/courses, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/v1/courses/(.+), roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/v1/courses/add, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/v1/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/v1/doc, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/v1/token/refresh, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/course_delete, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/course_update, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/v1/transactions, roles: IS_AUTHENTICATED_FULLY }
