--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/phpunit-bridge": "^4.3",
         "symfony/security-bundle": "4.3.*",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "^4.3",
         "symfony/validator": "4.3.*",
         "symfony/yaml": "4.3.*"
